    cloud-init. (LP: #1539126)
  * setup-commands/setup-testbed: Purge lxd and lxc.
  * adt-virt-lxc: Don't fail on deprecation warnings of lxc-clone and
    lxc-start-ephemeral. (LP: #1549995)
  * adt-virt-lxd: Launch containers in ephemeral mode.
  * Run external commands with /dev/null as stdin. This has always been
    intended, but has not actually been done for a while.

 -- Martin Pitt <mpitt@debian.org>  Tue, 23 Feb 2016 18:21:51 +0100

autopkgtest (3.19.3) unstable; urgency=medium

  * setup-commands/setup-testbed: Avoid dpkg conffile prompts.
  * adt-virt-lxc: Call lxc-stop and lxc-destroy with --quiet, to fix breakage
    due to unexpected output with LXC 2.0.
  * adt-virt-lxc: Redirect lxc-destroy stdout, to work around LP #1543016.
  * Ignore build profiles on too old libdpkg-perl versions also when building
    the tested package.
  * adt-virt-lxd.1: Standard images from linuxcontainers.org stopped having
    "deb-src" apt lines by default. Document that standard setup commands are
    required for this and adjust examples accordingly.
  * adt-virt-lxc: Factorize cleanup code.
  * adt-virt-lxc: Run lxc-{start,stop} under "timeout" when running through
    sudo, as killing these on timeout does not work.
  * ssh-setup/nova: Wait until instance is actually ready before sending
    access info.
  * ssh-setup/nova: Show instance's console log on ssh or cloud-init timeouts,
    as that's very useful for debugging.
  * adt-virt-lxd: Drop redundant "lxc stop", just call "lxc delete --force".
  * adt-buildvm-ubuntu-cloud: Bump default image size from 4 to 20 GB.
  * runner/adt-run: Install ca-certificates along with git, to ensure that
    https URLs can be cloned.
  * tools/adt-build-lxd: Add workaround for broken "lxc file push" permissions
    (LP: #1548878)

 -- Martin Pitt <mpitt@debian.org>  Tue, 23 Feb 2016 17:56:45 +0100

autopkgtest (3.19.2) unstable; urgency=medium

  * Fix "apt-get source" version detection: