@@ -202,10 +202,6 @@ def hook_cleanup():
     VirtSubproc.check_exec(['lxc', 'delete', '--force', container_name], timeout=600)
 
 
-def hook_forked_inchild():
-    pass
-
-
 def hook_capabilities():
     return capabilities
 
