@@ -546,10 +546,6 @@ def hook_wait_reboot():
     setup_shared(shareddir)
 
 
-def hook_forked_inchild():
-    pass
-
-
 def hook_capabilities():
     global normal_user
     caps = ['revert', 'revert-full-system', 'root-on-testbed',
