@@ -401,10 +401,6 @@ def hook_downtmp(path):
     return VirtSubproc.downtmp_mktemp(path)
 
 
-def hook_forked_inchild():
-    pass
-
-
 def hook_revert():
     host_setup('revert')
 
