@@ -8,6 +8,8 @@ autopkgtest (3.19.4) UNRELEASED; urgency=medium
   * adt-virt-lxd: Launch containers in ephemeral mode.
   * Run external commands with /dev/null as stdin. This has always been
     intended, but has not actually been done for a while.
+  * Drop support for hook_forked_inchild() in virt-runners. This has never
+    been used.
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 23 Feb 2016 18:21:51 +0100
 
